RESOLVED FIXED 260500
ScrollingStateNode::m_children should be a Vector instead of a unique_ptr<Vector>
https://bugs.webkit.org/show_bug.cgi?id=260500
Summary ScrollingStateNode::m_children should be a Vector instead of a unique_ptr<Vec...
Alex Christensen
Reported 2023-08-21 18:16:31 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-21 18:17:35 PDT
Alex Christensen
Comment 2 2023-08-21 18:18:43 PDT
EWS
Comment 3 2023-08-22 19:44:34 PDT
Committed 267174@main (c32407025177): <https://commits.webkit.org/267174@main> Reviewed commits have been landed. Closing PR #16915 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.