Source/WebCore/page/scrolling/ScrollingStateTree.cpp
@@ -52,10 +52,8 @@ static void nodeWasReattachedRecursive(ScrollingStateNode& node)
     // When a node is re-attached, the ScrollingTree is recreating the ScrollingNode from scratch, so we need to set all the dirty bits.
     node.setPropertyChangesAfterReattach();
 
-    if (auto* children = node.children()) {
-        for (auto& child : *children)
-            nodeWasReattachedRecursive(*child);
-    }
+    for (auto& child : node.children())
+        nodeWasReattachedRecursive(child);
 }
 
 ScrollingStateTree::ScrollingStateTree(AsyncScrollingCoordinator* scrollingCoordinator)
@@ -250,12 +248,10 @@ void ScrollingStateTree::unparentChildrenAndDestroyNode(ScrollingNodeID nodeID)
     if (protectedNode == m_rootStateNode)
         m_rootStateNode = nullptr;
 
-    if (auto isolatedChildren = protectedNode->takeChildren()) {
-        for (auto child : *isolatedChildren) {
-            child->removeFromParent();
-            LOG_WITH_STREAM(ScrollingTree, stream << " moving " << child->scrollingNodeID() << " to unparented nodes");
-            m_unparentedNodes.add(child->scrollingNodeID(), WTFMove(child));
-        }
+    for (auto child : protectedNode->takeChildren()) {
+        child->removeFromParent();
+        LOG_WITH_STREAM(ScrollingTree, stream << " moving " << child->scrollingNodeID() << " to unparented nodes");
+        m_unparentedNodes.add(child->scrollingNodeID(), WTFMove(child));
     }
     
     protectedNode->removeFromParent();
@@ -316,12 +312,8 @@ void ScrollingStateTree::traverse(const ScrollingStateNode& node, const Function
 {
     traversalFunc(node);
 
-    if (auto* children = node.children()) {
-        for (auto childNode : *children) {
-            ASSERT(childNode);
-            traverse(*childNode, traversalFunc);
-        }
-    }
+    for (auto childNode : node.children())
+        traverse(childNode, traversalFunc);
 }
 
 bool ScrollingStateTree::isValid() const
@@ -387,12 +379,14 @@ void ScrollingStateTree::removeNodeAndAllDescendants(ScrollingStateNode& node)
     if (&node == m_rootStateNode)
         m_rootStateNode = nullptr;
     else if (parent) {
-        ASSERT(parent->children());
-        ASSERT(parent->children()->contains(&node));
-        if (auto* children = parent->children()) {
-            if (size_t index = children->find(&node); index != notFound)
-                children->remove(index);
-        }
+        auto& children = parent->children();
+        size_t index = children.findIf([&](auto& child) {
+            return child.ptr() == &node;
+        });
+        if (index != notFound)
+            children.remove(index);
+        else
+            ASSERT_NOT_REACHED();
     }
 }
 
@@ -401,10 +395,8 @@ void ScrollingStateTree::recursiveNodeWillBeRemoved(ScrollingStateNode& currentN
     currentNode.setParent(nullptr);
     willRemoveNode(currentNode);
 
-    if (auto* children = currentNode.children()) {
-        for (auto& child : *children)
-            recursiveNodeWillBeRemoved(*child);
-    }
+    for (auto& child : currentNode.children())
+        recursiveNodeWillBeRemoved(child);
 }
 
 void ScrollingStateTree::willRemoveNode(ScrollingStateNode& node)
@@ -423,16 +415,13 @@ RefPtr<ScrollingStateNode> ScrollingStateTree::stateNodeForID(ScrollingNodeID no
 static void reconcileLayerPositionsRecursive(ScrollingStateNode& currentNode, const LayoutRect& layoutViewport, ScrollingLayerPositionAction action)
 {
     currentNode.reconcileLayerPositionForViewportRect(layoutViewport, action);
-
-    if (!currentNode.children())
-        return;
     
-    for (auto& child : *currentNode.children()) {
+    for (auto& child : currentNode.children()) {
         // Never need to cross frame boundaries, since viewport rect reconciliation is per frame.
         if (is<ScrollingStateFrameScrollingNode>(child))
             continue;
 
-        reconcileLayerPositionsRecursive(*child, layoutViewport, action);
+        reconcileLayerPositionsRecursive(child, layoutViewport, action);
     }
 }
 
